# money4band

./: .env  .env.template  .env_template  .gitignore  README.md  bitpingSetup.ps1  bitpingSetup.sh  bitpingetup.ps1  docker-compose.yaml  docker-compose.yaml.template  docker-compose.yml  docker.binfmt.service  generate_dashboard_urls.ps1  generate_dashboard_urls.sh  install-docker.ps1  main.py  pyproject.toml  requirements.txt  runNproxies.sh  runme.ps1  runme.sh  runmproxies.ps1  runmproxies.sh  verify_port_logic.py  winDockerAutoSetup.ps1  workflow-linux-arm64.dockerfile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yaml  FUNDING.yml  FUNDING.yml.template  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-on-tag.yml
.resources/.configs/: config.json
.resources/.files/: docker-compose.yml  docker-default-settings.json
.resources/.scripts/: bitpingSetup.ps1  bitpingSetup.sh  install-docker-mac.ps1  install-docker-win.ps1  install-docker.ps1
.resources/.www/: Home.css  Home.html  custom.css  index.html  nicepage.css
.resources/.www/.configs/: app_config.json  config.json  (+1 more)
config/: app-config.json  m4b-config.json  user-config.json
examples/: fn_generic.py.template
legacy_money4bandv3x/: generate_dashboard_urls.sh  runmproxies.sh
money4bandv4/: .gitignore  m4b-config.json  main.py
money4bandv4/config/: m4b-config.json  user-config.json
money4bandv4/m4b-tools/: fn_show_links.py
money4bandv4/utils/: cls.py  detect.py  fn_show_links.py  load.py
template/: tmp.json  user-config.json
tests/: test_app_config_commands.py  test_cls.py  test_detector.py  test_download_file.py  test_downloader.py  test_fn_install_docker.py  test_fn_setupApps.py  test_fn_show_links.py  test_generator.py  test_loader.py  test_networker.py  test_port_logic.py  test_prompt_helper.py  test_reset_config.py
utils/: checker.py  cls.py  detect.py  detector.py  dockweb_WIP.py  download_file.py  downloader.py  dumper.py  fn_bye.py  fn_install_docker.py  fn_multiproxy_tools.py  fn_resetConfig.py  fn_reset_config.py  fn_setupApps.py  fn_show_links.py  fn_startStack.py  fn_stopStack.py  fn_stopStack_old.py  fn_uuid_generator.py  generator.py  helper.py  load.py  loader.py  networker.py  prompt_helper.py  updater.py
www/Money4Band/: Home.html  index.html
(+11 files in other folders)
